--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ li a:hover:not(.active) {
             color :red;
             text-align: center;
             font-size: 80px;}
+        h6{font-family: "deadpool";
+            color :red;
+            text-align: center;
+            font-size: 15px;}
         p{
             font-family: serif;
             color :white;
@@ -73,7 +77,7 @@ li a:hover:not(.active) {
                 </button>
                  <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#page-top">Deadpool</a>
+                                <a href="#page-top"><h6>Deadpool</h6></a>
                                 </li>
                             <li class="nav-item">
                                 <a href="#home">Home</a>
