--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ li a:hover:not(.active) {
             color :red;
             text-align: center;
             font-size: 80px;}
-        h6{font-family: "deadpool";
+        p1{font-family: "deadpool";
             color :red;
             text-align: center;
             font-size: 15px;}
@@ -77,7 +77,7 @@ li a:hover:not(.active) {
                 </button>
                  <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#page-top"><h6>Deadpool</h6></a>
+                                <a href="#page-top"><p1>Deadpool</p1></a>
                                 </li>
                             <li class="nav-item">
                                 <a href="#home">Home</a>
