--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ li a:hover:not(.active) {
                 </button>
                  <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#page-top"><p1>Deadpool</p1></a>
+                                <a href="#page-top"><p1>Deadp()l</p1></a>
                                 </li>
                             <li class="nav-item">
                                 <a href="#home">Home</a>
