--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  top: 0;
+  width: 100%;
   overflow: hidden;
   opacity: 0.75;
   position: fixed;
