--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ li a:hover:not(.active) {
                             <li class="nav-item">
                                 <a href="#contact">Contact</a>
                                 </li>
-                            <button type="button" class="menu-button" style="background-color: black; opacity: 0.75;">
+                            <button type="button" class="menu-button" style="background-color: black; opacity: 0.75; float: right;">
                                 <span></span>
                                 <span></span>
                                 <span></span>
