added seperate css folder

--- a/index.html
+++ b/index.html
@@ -1,79 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Deadpool</title>
-    <style>
-        body, html {
-  height: 400%;
-  margin: 0;
-}
-.menu-button span {
-    display: block;
-    width: 35px;
-    height: 5px;
-    background-color: white;
-    margin: 6px 0;
-
-}
-         @font-face {
-            font-family: 'deadpool';
-            src: URL('deadpool.ttf') format('truetype');
-                }
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  top: 0;
-  width: 100%;
-  overflow: hidden;
-  opacity: 0.75;
-  position: fixed;
-  background-color: black;
-}
-
-li {
-  float: left;
-  border-right:1px solid #bbb;
-  
-}
-
-li:last-child {
-  border-right: none;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover:not(.active) {
-  background-color: #111;
-}
-
-.active {
-  background-color: #4CAF50;
-}    
-        
-        h1{font-family: "deadpool";
-            color :red;
-            text-align: center;
-            font-size: 80px;}
-        p1{font-family: "deadpool";
-            color :red;
-            text-align: center;
-            font-size: 15px;}
-        p{
-            font-family: serif;
-            color :white;
-            text-align: center;
-            font-size: 40px;}
-        </style>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">  
 </head>
 
 <body id ="page-top" style="background:url(D3.jpg) no-repeat top; height: 100%; " >
@@ -110,9 +44,13 @@ li a:hover:not(.active) {
             </div>
         </div>
     </nav>
-    <h1>DEADP()L</h1>
-    <p>GRAPHICS DESIGNER</p>
 
-    
+    <div class="intro-route" id="home">
+        <div class="container">
+                <h1>DEADP()L</h1>
+                <p>GRAPHICS DESIGNER</p>
+        </div>
+    </div>
+
 </body>
 </html>
